--- a/index.html
+++ b/index.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="main.css">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title></title>
+<link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-	<header>TwitMe</header>
+<header>TwitMe</header>
 
-	<main>
+<main>
 
-		<section>
-				<form>
-					<div>
-						<label for="titulo">Titulo <span class="required"></label>
-						<input id="titulo" type="text" placeholder="Titulo">
-					</div>
-					<div>
-					<label for="desc">Descripcion <span class="required"></span></label>
-					<textarea id="desc" name="desc" placeholder="Ingrese descripcion..." required ="required"></textarea>
-					</div>
-				</form>
+<section>
+		<form>
+			<div>
+				<label for="titulo">Titulo <span class="required"></label>
+				<input id="titulo" type="text" placeholder="Titulo">
+			</div>
+			<div>
+			<label for="desc">Descripcion <span class="required"></span></label>
+			<textarea id="desc" name="desc" placeholder="Ingrese descripcion..." required ="required"></textarea>
+			</div>
 
-				<div>
-					<button id="aceptar" conclick="Twit.aceptar()">Aceptar</button>
-					<button id="cancelar" onclick= "Twit.cancelar()">Cancelar</button>
-				</div>
-		</section>
-		<section id="comentarios">
+			<div>
+			<button id="aceptar" onclick="Twit.aceptar(event)">Aceptar</button>
+			<button id="cancelar" onclick= "Twit.cancelar(event)">Cancelar</button>
+			</div>
+		</form>
 
-			<article>
-				<h2>Titulo</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla consequuntur itaque sunt, eaque voluptas laudantium iure rerum ad, eius assumenda dicta asperiores nihil minus est quas deserunt doloribus ratione vero.</p>
-					
-			</article>						
+		
+</section>
+<section id="comentarios">
 
-		</section>
+						
 
-	</main>
+</section>
+
+</main>
 
 
 </body>
 
-	<script src="js/Twit.js" type="text/javascript"></script>
+<script src="js/Twit.js" type="text/javascript"></script>
 
 </html>
