new object guardar is added to js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section>
 		<form>
 			<div>
-				<label for="titulo">Titulo <span class="required"></label>
+				<label for="titulo">Titulo <span class="required"></span></label>
 				<input id="titulo" type="text" placeholder="Titulo">
 			</div>
 			<div>
